# cms-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  cms-demo.code-workspace  docker-compose.yml  manage.py  package-lock.json  package.json  postgresql.sql  requirements.txt  springtb.csv  sqlserver.sql  type2.sql
app/: __init__.py
app/dataset/: __init__.py  utils.py  views.py
app/static/js/: form_controller.js  index.js  menu_template.js  tab_controller.js  table_controller.js  tree_controller.js
archive/: app.py  package-lock.json  postgresql.sql  sqlserver.sql  type2.sql
archive/static/css/: index.css
archive/static/js/: form_controller.js  form_template.js  index.js  tab_controller.js  table_template.js  tree_controller.js
database/postgresql/: Dockerfile
database/postgresql/postgresql/: springFdList_d.csv  springFdList_m.csv  springField.csv  springSp.csv  springTbUiTemplate.csv
db_arch.mindnode/: contents.xml  viewState.plist
docker/: DBSchemaInit.sql  Dockerfile  Ocean.sql  OceanCms.sql  entrypoint.sh  setup-database.sh
docker/postgresql/: DBSchemaInit.sql  Dockerfile
docker/postgresql/postgresql/: springDbInfo.csv  springField.csv  springSp.csv  (+3 more)
lib/: db.js
migrations/2020-11-09-025109_create_posts/: up.sql
src/: db.rs  lib.rs  main.rs  postgresql.sql  schema.rs  sqlserver.sql  test.rs
static/css/: index.css
static/js/: form_controller.js  form_template.js  index.js  menu_template.js  tab_controller.js  table_controller.js  table_template.js  tree.js  tree_controller.js  tree_pure_async.js
templates/: index.html
