[package]
name = "cms-demo"
version = "0.1.0"
authors = ["NavePnow <evan.wong.stu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres="*"
postgres-openssl = "*"
postgres-native-tls = "*"
tokio-postgres = "*"